# nix-intro

./: .gitignore  Cargo.nix  Cargo.toml  README.md  flake.nix  justfile
.github/workflows/: nix-gql-rs.yml
direnv/: README.md  flake.nix
hello/: Dockerfile  README.md
hello-flake/: README.md  flake.nix  hello-flake.c  hello-flake.tar
nix-flake-utils/: README.md
nix-lang/: README.md
patch-flake/: README.md  flake.nix  hello.patch
rs-gql/: Cargo.nix  Cargo.toml  README.md
rs-gql/src/: main.rs
spark/: README.md  flake.nix
src/: main.rs
