[package]
name = "nix-gql-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
async-graphql = { version = "7" }
async-graphql-poem = { version = "7" }
poem = { version = "2.0" }
